      possible memory-stomping bugs.
    - Fix crash with "tor --list-fingerprint" (reported by seeess).
    - Expire socks connections if they spend too long waiting for the
      handshake to finish. Previously we would let them sit around for
      days, if the connecting application didn't close them either.
    - Stop using C functions that OpenBSD's linker doesn't like.


Changes in version 0.1.2.6-alpha - 2007-01-09
  o Major bugfixes:
    - Fix an assert error introduced in 0.1.2.5-alpha: if a single TLS
      connection handles more than 4 gigs in either direction, we crash.
    - Fix an assert error introduced in 0.1.2.5-alpha: if we're an
      advertised exit node, somebody might try to exit from us when
      we're bootstrapping and before we've built your descriptor yet.
      Refuse the connection rather than crashing.

  o Minor bugfixes:
    - Warn if we (as a server) find that we've resolved an address that we
      weren't planning to resolve.
    - Warn that using select() on any libevent version before 1.1 will be
      unnecessarily slow (even for select()).
    - Flush ERR-level controller status events just like we currently
      flush ERR-level log events, so that a Tor shutdown doesn't prevent
      the controller from learning about current events.

  o Minor features (more controller status events):
    - Implement EXTERNAL_ADDRESS server status event so controllers can
      learn when our address changes.
    - Implement BAD_SERVER_DESCRIPTOR server status event so controllers
      can learn when directories reject our descriptor.
    - Implement SOCKS_UNKNOWN_PROTOCOL client status event so controllers
      can learn when a client application is speaking a non-socks protocol
      to our SocksPort.
    - Implement DANGEROUS_SOCKS client status event so controllers
      can learn when a client application is leaking DNS addresses.
    - Implement BUG general status event so controllers can learn when