@@ -41,6 +41,11 @@ Changes in version 0.1.2.7-alpha - 2007-??-??
       handshake to finish. Previously we would let them sit around for
       days, if the connecting application didn't close them either.
     - Stop using C functions that OpenBSD's linker doesn't like.
+    - Detect and reject DNS replies containing IPv4 or IPv6 records with
+      an incorrect number of bytes. (Previously, we would ignore the extra
+      bytes.)
+    - Fix as-yet-unused reverse IPv6 lookup code so it sends nybbles in the
+      correct order.
 
 
 Changes in version 0.1.2.6-alpha - 2007-01-09
